[package]
name = "frps-echo-server"
version = "0.1.0"
authors = ["Tomáš Siegl <tomas.siegl@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.5.0", features = ["attributes"] }
futures = "0.3.4"
async-h1 = "1.1.0"
http-types = "1.1.1"
async-listen = "0.2.0"
libfrps-rs = { path = "../libfrps-rs" }
